SERVER-73348 Remove DocumentSourceSequentialDocumentCache invariant