src/mongo/db/pipeline/document_source_sequential_document_cache.cpp
@@ -41,7 +41,6 @@ DocumentSourceSequentialDocumentCache::DocumentSourceSequentialDocumentCache(
     const boost::intrusive_ptr<ExpressionContext>& expCtx, SequentialDocumentCache* cache)
     : DocumentSource(kStageName, expCtx), _cache(cache) {
     invariant(_cache);
-    invariant(!_cache->isAbandoned());
 
     if (_cache->isServing()) {
         _cache->restartIteration();
